# ice-old

./: CMakeLists.txt  CONTROL  readme.md
include/ice/: base.hpp  bitmask.hpp  exception.hpp  json.hpp  log.hpp  sha256.hpp  uuid.hpp
include/ice/log/: console.hpp  file.hpp  sink.hpp
res/: config.cmake.in
src/: application.cpp  color.cpp  log.cpp  uuid.cpp
src/log/: console.cpp  file.cpp
